# audio-manager-cli

./: CMakeLists.txt  main.cpp  readme.md
asio/host/: asiodrivers.cpp
asio/host/sample/: hostsample.cpp
asio/inc/: combase.h
drivers/abstraction/: audiochannel.cpp  audiochannel.h  audiodriver.cpp  audiodriver.h
drivers/asio/: asiodriver.cpp  asiodriver.h
meta/: AudioError.h  audiometa.h
processor/abstraction/: audiodevice.cpp  audiodevice.h  audiogenerator.cpp  audiogenerator.h  audioreciever.cpp  audioreciever.h
processor/effects/: HighPassFilter.cpp  HighPassFilter.h  Imager.cpp  Imager.h  QuadFilter.cpp  QuadFilter.h
processor/generator/: sine.cpp  sine.h  waveformplayer.cpp  waveformplayer.h
processor/routing/: Panner.cpp  Panner.h  fader.cpp  fader.h
timing/: sampletimecode.cpp  sampletimecode.h
tools/PCM/: pcm.cpp
